--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "core-js": "^3.8.3",
+    "gsap": "^3.6.1",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
