--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "gsap": "^3.6.1",
     "register-service-worker": "^1.7.2",
+    "vee-validate": "^3.4.5",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
