--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vee-validate": "^3.4.5",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
+    "vue2-datepicker": "^3.9.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
