--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "axios": "^0.21.1",
     "core-js": "^3.8.3",
     "gsap": "^3.6.1",
     "register-service-worker": "^1.7.2",
@@ -21,12 +22,12 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-pwa": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-plugin-babel": "~5.0.0-beta.1",
+    "@vue/cli-plugin-eslint": "~5.0.0-beta.1",
+    "@vue/cli-plugin-pwa": "~5.0.0-beta.1",
+    "@vue/cli-plugin-router": "~5.0.0-beta.1",
+    "@vue/cli-plugin-vuex": "~5.0.0-beta.1",
+    "@vue/cli-service": "~5.0.0-beta.1",
     "@vue/eslint-config-prettier": "^6.0.0",
     "eslint": "^7.20.0",
     "eslint-plugin-prettier": "^3.3.1",
